import org.gradle.api.plugins.internal.DefaultJavaPluginExtension

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

bootJar {
    archiveFileName = 'app.jar'
}

group = 'com.ssafy.as'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url "https://repo.maven.apache.org/maven2/" }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.mysql:mysql-connector-j:8.2.0'

    // FCM
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework:spring-messaging'

    //mysql
    implementation 'mysql:mysql-connector-java:8.0.33'

    // WebSocket & STOMP
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    //Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-config'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // CoolSMS
    implementation 'net.nurigo:sdk:4.3.2'

    // ElasticSearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch:3.4.2'

    // Webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.4.2'
}

tasks.named('test') {
    useJUnitPlatform()
}

// QueryDSL 소스 경로 설정
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

java {
    sourceSets {
        main {
            java {
                srcDirs += layout.buildDirectory.dir("generated/querydsl").get().asFile
            }
        }
    }
}


// Clean 시 생성 파일 삭제
tasks.named('clean') {
    delete querydslDir
}

void main(Closure<DefaultJavaPluginExtension> defaultJavaPluginExtensionClosure) {

}